fix(blog): update byline styles to help with wrapping

--- a/src/components/pages/blog/byline.module.scss
+++ b/src/components/pages/blog/byline.module.scss
@@ -17,20 +17,21 @@
       margin-right: -5px;
     }
   }
+  .spacer {
+    white-space: pre;
+  }
   .author::after {
     content: "  |  ";
     white-space: pre;
   }
-  .author-date-container {
+  * {
     margin: 0.5rem 0;
     font-size: 1.125rem;
-    * {
-      font-size: 1.125rem;
-      display: inline;
-    }
-    .author-inner {
-      font-weight: bold;
-    }
+    display: inline;
+  }
+  .author-inner {
+    font-weight: bold;
+    display: inline;
   }
   .date {
     color: $color-slate-700;
